<resources>
    <string name="app_name">Zakat Kita (Android)</string>
    <string name="materi">Materi Zakat</string>
    <string name="latihan">Soal Latihan</string>
    <string name="kalkulator">Kalkulator Zakat</string>
    <string name="tentang">Tentang Aplikasi</string>
    <string name="zakat_fitrah">Zakat Fitrah</string>
    <string name="zakat_maal">Zakat Maal</string>
    <string name="hitung">HITUNG</string>
    <string name="zakat_pertanian">Zakat Pertanian</string>
    <string name="zakat_perdagangan">Zakat Perdagangan</string>
    <string name="fitrah">Zakat Firah</string>
    <string name="zakatemas">Zakat Emas</string>
    <string name="zakatperak">Zakat Perak</string>
    <string name="zakatdagang">Zakat Perdagangan</string>
    <string name="zakatpertanian">Zakat Pertanian</string>
    <string name="contoh_perhitungan_zakat">Contoh Perhitungan Zakat</string>
    <string name="besar_zakat">Besar Zakat</string>
    <string name="waktu_pelaksanaan_zakat">Waktu Pelaksanaan</string>
    <string name="nishab_zakat">Nishab Zakat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="zakat_hewan_ternak">Zakat Hewan Ternak</string>
    <string name="jenis_hewan">Jenis Hewan</string>
    <string name="unta">Unta</string>
    <string name="sapi_kerbau">Sapi/Kerbau</string>
    <string name="kambing">Kambing</string>
    <string name="selanjutnya">SELANJUTNYA</string>
    <string name="cek_jawaban">CEK JAWABAN</string>
    <string name="skor_akhir">SKOR AKHIR</string>
    <string name="_setNol">0</string>
    <string name="ulang">ULANG</string>
    <string name="lihat_tabel">Lihat Tabel</string>
    <string name="tidak_wajib_zakat">Anda tidak wajib membayar zakat karena harta yang dimiliki belum mencapai nisab dan haul</string>
    <string name="jenis_tanaman">Jenis Tanaman</string>
    <string name="gandum">Gandum</string>
    <string name="beras">Beras</string>
    <string name="jagung">Jagung</string>
    <string name="berat_tanaman_kg">Berat tanaman (kg)</string>
    <string name="proses_pengairan">Proses Pengairan</string>
    <string name="disiram_manual">Disiram manual</string>
    <string name="disiram_hujan">Disiram hujan</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Registrasi</string>
    <string name="back_to_login">Back to Login</string>
    <string name="login_gagal">Login Gagal. Username dan Password salah.</string>
    <string name="login_sukses">Login Sukses</string>
    <string name="profil_user">Profil User</string>
    <string name="log_out">LOG OUT</string>
</resources>
