<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.izzatul.bismillahta.KalkulatorActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvZakatFitrah"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/background_light"
            android:text="@string/zakat_fitrah"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvZakatMaal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:text="@string/zakat_maal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvZakatPertanian"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:text="@string/zakat_pertanian"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvZakatPerdagangan"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:text="@string/zakat_perdagangan"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </android.support.v7.widget.CardView>

</LinearLayout>
